--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,4 +1,4 @@
-.contacto{background-image: url(../resources/balcarcewb.jpeg);
+.contacto{background-image: url(../resources/imagenes/balcarcewb.jpeg);
     
 
 }
