paginas que faltabasn

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
 @import url(../styles/contacto.css);
 @import url(../styles/Los-Pinos-San-Agustin.css);
+@import url(../styles/laguna.css);
+@import url(../styles/citytour.css);
+
 
 .navtop{background-color: #1B2631;
 
