--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url(../styles/contacto.css);
+@import url(../styles/balcarce.css);
 @import url(../styles/Los-Pinos-San-Agustin.css);
 @import url(../styles/laguna.css);
 @import url(../styles/citytour.css);
